--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 </body>
   
   
-  
+ <h2>
+Capybaras are fantastic swimmers
+They can even sleep in water
+</h2>
+<img src=https://as1.ftcdn.net/v2/jpg/03/18/69/12/1000_F_318691295_ToZK7XNTeW3GS9BF4etdd7kESiAA5QyO.jpg>
   
   
   
