--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
- <html>
-
 <title>eminems story</title>
+<head>
+
+
+<body>
 <h1>
 Eminems IN DEPTH story.
-</h1>
-<img src=https://imgix.ranker.com/user_node_img/50040/1000796738/original/young-eminem-in-blue-plaid-buttondown-and-gray-sweater-photo-u1?auto=format&q=60&fit=crop&fm=pjpg&dpr=2&w=650
-   width="300" 
-     height="300>
+>
      
-     <h3> Eminem was born as Marshall Mathers, the blue-eyed child of Marshall Bruce Mathers Jr. and Debbie Nelson Mathers-Briggs. Marshall's father took off 18 months after his birth, leaving 15-year-old Debbie to care for Marshall and later his younger brother Nathan. Marshall's childhood involved moving between multiple public housing systems in Kansas City and Detroit. Frequently the new kid and often one of the only white ones, Marshall started inhabiting an outsider's stance at an early age, often resulting in his being bullied. Meanwhile, home proved just as rocky. His mother exhibited signs of mental illness, so the responsibility for caring for his younger brother fell on Marshall's shoulders.</h3>
-
-
-
-
-
-</html> 
+    <h3>
+     Eminem was born as Marshall Mathers, the blue-eyed child of Marshall Bruce Mathers Jr. and Debbie Nelson Mathers-Briggs. Marshall's father took off 18 months after his birth, leaving 15-year-old Debbie to care for Marshall and later his younger brother Nathan. Marshall's childhood involved moving between multiple public housing systems in Kansas City and Detroit. Frequently the new kid and often one of the only white ones, Marshall started inhabiting an outsider's stance at an early age, often resulting in his being bullied. Meanwhile, home proved just as rocky. His mother exhibited signs of mental illness, so the responsibility for caring for his younger brother fell on Marshall's shoulders.
+     </h3>
+     
+     </h1>
